<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add"
    style="@style/MainMenuCard"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    tools:context=".activities.add.AddActivity"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/predefined"
            style="@style/EngineSourceItem"
            android:text="@string/from_library" />

        <TextView
            android:id="@+id/mycroft"
            style="@style/EngineSourceItem"
            android:text="@string/mycroft_project" />

        <TextView
            android:id="@+id/mycroft_top100"
            style="@style/EngineSourceItem"
            android:text="@string/mycroft_top_100" />


        <TextView
            android:id="@+id/xml_file"
            style="@style/EngineSourceItem"
            android:text="@string/xml_file" />

        <TextView
            android:id="@+id/close"
            style="@style/EngineSourceHeader"
            android:text="@string/add" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
