<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        style="@style/HeaderBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerBarHeight"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settings_close_button"
            style="@style/MycroftButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mycroft_close" />

        <TextView
            android:id="@+id/textView4"
            style="@style/FullscreenTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_close_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/settings_rate_me_button"
            style="@style/FullscreenTitleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/settings_rate_me"
            android:text="@string/rate_me"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <fragment
                android:id="@+id/settings_main_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="org.deletethis.blitzspot.app.activities.settings.SettingsFragment"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/hintContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="invisible"
                app:cardCornerRadius="8dp"
                app:cardElevation="3dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:paddingEnd="8dp"
                        android:importantForAccessibility="no"
                        app:srcCompat="@drawable/jump_info_icon" />

                    <TextView
                        android:id="@+id/hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="12sp"
                        tools:text="Did you brush your teeth today?" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:elevation="8dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/blitzspot_instant"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/help1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/main_help_1"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/help2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/main_help_2"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/help3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_help_3"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>